force-app/main/default/objects/OneCRM__Household_Naming_Settings__c/OneCRM__Household_Naming_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for controlling how Households are named (Name, Formal Greeting, Informal Greeting).</description>
    <label>Household Naming Settings</label>
</CustomObject>