force-app/main/default/objects/OneCRM__Household_Naming_Settings__c/fields/OneCRM__Contact_Overrun_Count__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Contact_Overrun_Count__c</fullName>
    <description>Specifies the number of Contacts to explicitly list in a name. After that amount, the Name Overrun will be used.</description>
    <inlineHelpText>Specifies the number of Contacts to explicitly list in a name. After that amount, the Name Overrun will be used.</inlineHelpText>
    <label>Contact Overrun Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>