force-app/main/default/objects/OneCRM__Household_Naming_Settings__c/fields/OneCRM__Custom_Formal_Greeting_Format__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Custom_Formal_Greeting_Format__c</fullName>
    <description>Custom format for the Household Formal Greeting.</description>
    <inlineHelpText>Custom format for the Household Formal Greeting.</inlineHelpText>
    <label>Custom Formal Greeting Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>