force-app/main/default/objects/OneCRM__Household_Naming_Settings__c/fields/OneCRM__Custom_Household_Name_Format__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Custom_Household_Name_Format__c</fullName>
    <description>Custom format to use for the Household Name.</description>
    <inlineHelpText>Custom format to use for the Household Name.</inlineHelpText>
    <label>Custom Household Name Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>