force-app/main/default/objects/OneCRM__Household_Naming_Settings__c/fields/OneCRM__Custom_Informal_Greeting_Format__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Custom_Informal_Greeting_Format__c</fullName>
    <description>Custom format to use for the Household Informal Greeting.</description>
    <inlineHelpText>Custom format to use for the Household Informal Greeting.</inlineHelpText>
    <label>Custom Informal Greeting Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>