force-app/main/default/objects/OneCRM__Household_Naming_Settings__c/fields/OneCRM__Formal_Greeting_Format__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Formal_Greeting_Format__c</fullName>
    <description>The format to use for the Household Formal Greeting.</description>
    <inlineHelpText>The format to use for the Household Formal Greeting.</inlineHelpText>
    <label>Formal Greeting Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>