force-app/main/default/objects/OneCRM__Household_Naming_Settings__c/fields/OneCRM__Name_Connector__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Name_Connector__c</fullName>
    <description>When connecting two names, would you like to use &quot;&amp;&quot; or &quot;and&quot;</description>
    <inlineHelpText>When connecting two names, would you like to use &quot;&amp;&quot; or &quot;and&quot;</inlineHelpText>
    <label>Name Connector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>