force-app/main/default/objects/OneCRM__Household_Naming_Settings__c/fields/OneCRM__Name_Overrun__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Name_Overrun__c</fullName>
    <defaultValue>&quot;Friends&quot;</defaultValue>
    <description>The string to use when replacing long lists of names.</description>
    <inlineHelpText>The string to use when replacing long lists of names.</inlineHelpText>
    <label>Name Overrun</label>
    <length>255</length>
    <type>Text</type>
</CustomField>