force-app/main/default/objects/OneCRM__Household_Naming_Settings__c/fields/OneCRM__Title_Connector__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Title_Connector__c</fullName>
    <description>The connector of the title</description>
    <inlineHelpText>Text or symbol to use when connecting titles, for example Rabbi &amp; Mrs. Ezagui or Rabbi and Mrs. Ezagui</inlineHelpText>
    <label>Title Connector</label>
    <length>10</length>
    <type>Text</type>
</CustomField>